Small fix to home image overlap issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ footer a:hover {
 }
 
 /* HOME IMAGE LANDSCAPE HEIGHT FIX */
-@media all and (min-height: 200px) and (max-height:500px) {
+@media all and (min-height: 200px) and (max-height:615px) {
   #home-page-img-cycler {
     height: 58vh;
   }
@@ -262,7 +262,7 @@ input.btn {
 
 
 /*********TABLET/LANDSCAPE STYLES*********/
-@media all and (min-width: 600px) and (min-height:501px) {
+@media all and (min-width: 600px) and (min-height:611px) {
 
   #home-page-img-cycler {
     height:52vh; 
